share/remf-create-env-terraform/remf/k8s/apps/simplewhale/simplewhalei-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simplewhale
  namespace: apps
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: "50%"
      maxUnavailable: "50%"
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: simplewhale
  template:
    metadata:
      labels:
        app: simplewhale
    spec:
      containers:
      - image: roanfranklin/simplewhale:dev.13
        name: simplewhale
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
