share/remf-create-env-terraform/remf/k8s/apps/simplewhale/simplewhale-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simplewhale
  namespace: apps
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: simplewhale
