share/remf-create-env-terraform/remf/k8s/apps/simplewhale/simplewhale-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simplewhale
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`app2.remf.net.br`)
      services:
        - name: simplewhale
          port: 80
  tls:
    certResolver: aws
